--- a/Trailers.html
+++ b/Trailers.html
@@ -122,12 +122,13 @@
         </div>
 <ul class= 'navbar'>
   
-    <li><a href='shrek.html'>Home</a></li>
+    <li><a href='index.html'>Home</a></li>
     <li><a href='Details.html'>Details</a></li>
     <li><a href='Trailers.html'>Trailers</a></li>
     <li><a href='music.html'>Music</a></li>
     <li><a href='Swamp.html'>Swamp</a></li>
     <li><a href='quizzes.html'>Quizzes</a></li>
+
 
 
   
