--- a/music.html
+++ b/music.html
@@ -116,7 +116,7 @@
         </div>
 <ul class= 'navbar'>
   
-    <li><a href='shrek.html'>Home</a></li>
+    <li><a href='index.html'>Home</a></li>
     <li><a href='Details.html'>Details</a></li>
     <li><a href='Trailers.html'>Trailers</a></li>
     <li><a href='music.html'>Music</a></li>
