--- a/quizzes.html
+++ b/quizzes.html
@@ -127,7 +127,7 @@
         font-family:"Lucida Console", Monaco, monospace;
         letter-spacing: 4px;
         padding-left: 120px;
-        color:black;
+        color: rgb(0,0,0);
         text-decoration: none;
         font-size: 1em;
         
