--- a/Trailers.html
+++ b/Trailers.html
@@ -126,12 +126,8 @@
     <li><a href='Details.html'>Details</a></li>
     <li><a href='Trailers.html'>Trailers</a></li>
     <li><a href='music.html'>Music</a></li>
-    <li><a href='Swamp.html'>Swamp</a></li>
+    <li><a href='swamp2.html'>Swamp</a></li>
     <li><a href='quizzes.html'>Quizzes</a></li>
-
-
-
-  
 
         </ul>
     </div>
@@ -167,3 +163,5 @@
     
     </body>
     </div>
+    
+</html>
