--- a/quizzes.html
+++ b/quizzes.html
@@ -153,7 +153,7 @@
     <li><a href='Details.html'>Details</a></li>
     <li><a href='Trailers.html'>Trailers</a></li>
     <li><a href='music.html'>Music</a></li>
-    <li><a href='Swamp.html'>Swamp</a></li>
+    <li><a href='swamp2.html'>Swamp</a></li>
     <li><a href='quizzes.html'>Quizzes</a></li>
 
    </ul>
